--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">PlacesNerby</string>
     <string name="action_settings">search location</string>
     <string name="google_api_key">AIzaSyDpx-qOM4MKqkU-VLn8TDgBGIQ9o64_GlU</string>
+    <string name="gps_signal_not_found">Signal not found</string>
+    <string name="gps_signal_found">Good you have signal</string>
 </resources>
