--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="google_api_key">AIzaSyDpx-qOM4MKqkU-VLn8TDgBGIQ9o64_GlU</string>
     <string name="gps_signal_not_found">Signal not found</string>
     <string name="gps_signal_found">Good you have signal</string>
+    <string name="service_name">GPS Coordinates</string>
 </resources>
